# scribe-agent

./: .gitignore  Containerfile  README.md  pyproject.toml
deploy/: imagestream.yaml  openshift.yaml
deploy/tekton/: pipeline.yaml  task-build-push.yaml  task-git-clone.yaml
src/scribe_agent/: __init__.py  __main__.py  config.py  git_repo.py  llama_tools.py  main.py  mcp_github.py  state_store.py
